Andon (21/Feb/02)
-----------------
Changes:
 + Added some more verbosity to the PNG Loader's status
   dialog.
 + Eliminated the need to call sleep continuously in
   the PNG Loader progress dalog.
 + Optimized the PNG Loader's primary PNG --> BMP algor-
   ithms.
 + Added stricter pointer verification for inter-thread
   communication between the various threads in the PNG
   Loader.
 + Pressing the cancel button while the PNG Loader is
   running will now IMMEDIATELY halt the thread.
 + Zone specific "rotation" has been completely removed.
   This never should have been in Odin's Eye to begin
   with, its TRUE value is actually zone type.

Bug Fixes:
 + Fixed some lingering issues with thread state checking.
 + Added the progress dialog's sleep timer back... Turns
   out we still need it after all :)

 + Version bumped to 1.1.2a


Andon (20/Feb/02)
-----------------
Major Changes:
==============
 + The new PNG loading engine has been reworked a LOT...
   The changes allow the following:
    - Multiple maps may now be loaded at once.
    - New algorithms to detect adjacent zones.
    - Enhanced mapinfo.txt parsing
    - The ability to cancel map loading
    - Some added thread safety.

   * I will be adding a new map menu soon where you will
     be able to turn this feature on and off on the fly,
     as well as completely flush the textures on the map
     and some other things..

 + Also changed the user triangle to yellow (so you can
   see it easier).  This change may be quite undesirable.
   So let me know if you hate it.

 + Updated mapinfo.txt - Generated by a new program I
   wrote to parse the client files.. This new offset
   data is 100% accurate!  I'll release the program that
   parses the client files soon..

 + Version bumped up to 1.1.2

 PLEASE NOTE: The new adjacent map code is disabled by
              default, because it requires a great deal
              of CPU time / memory resources..  To use