@@ -1,3 +1,8 @@
+Druppy (22/Feb/02)
+-----------------
+Changes:
+	+ Added regexp filter circles around filted mobs.
+
 Andon (21/Feb/02)
 -----------------
 Changes:
